--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700,900');
+
+body {
+  font-family: 'Roboto', sans-serif;
+}
+
 /* Main navbar */
 .navbar-wagon {
   box-shadow: 0 1px 5px 0 rgba(0,0,0,0.07),0 1px 0 0 rgba(0,0,0,0.03);
@@ -8,11 +14,20 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
+  text-transform: uppercase;
 }
 
 /* Logo */
-.navbar-wagon-brand img {
-  height: 50px;
+.navbar-wagon-brand {
+  text-decoration: none;
+  color: black;
+  font-size: 20px;
+  font-weight:bold;
+}
+
+.navbar-wagon-brand:hover {
+  text-decoration: none;
+  color: black;
 }
 
 /* User Avatar */
@@ -74,4 +89,34 @@
   transform: rotate(45deg);
   border-left: 1px solid #E6E6E6;
   border-top: 1px solid #E6E6E6;
+}
+
+.underline-black {
+  text-decoration: none;
+  position: relative;
+  color: black !important;
+
+}
+.underline-black:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: -7px;
+  left: 0;
+  background-color: black;
+  visibility: hidden;
+  -webkit-transform: scaleX(.2);
+  transform: scaleX(.2);
+  -webkit-transition: all 0.9s cubic-bezier(1, 0.25, 0, 0.75) 0s;
+  transition: all 0.6s cubic-bezier(1, 0.25, 0, 0.75) 0s;
+}
+.underline-black:hover:before {
+  visibility: visible;
+  -webkit-transform: scaleX(.7);
+  transform: scaleX(.7);
+}
+
+.underline-black:hover {
+  color: black !important;
 }
