--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -1,4 +1,4 @@
-<div class="card" class="btn btn-primary" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url('https://kitt.lewagon.com/placeholder/cities/shanghai');">
+<div class="card" class="btn btn-primary" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= item.picture %>);">
   <div class="card-category">Popular</div>
   <div class="card-description">
     <h2>Le Wagon Shanghai</h2>
