--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,6 +14,7 @@
       <%= link_to "Why us?", "#", class: "navbar-wagon-item navbar-wagon-link underline-black" %>
       <%= link_to "Discover", "#", class: "navbar-wagon-item navbar-wagon-link underline-black" %>
       <%= link_to "Connect", "#", class: "navbar-wagon-item navbar-wagon-link underline-black" %>
+      <%= link_to "Upload", new_item_path , class: "navbar-wagon-item navbar-wagon-link underline-black" %>
 
 
       <!-- Avatar with dropdown menu -->
