--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -1,12 +1,25 @@
 <div class="footer">
-  <div class="footer-links">
-    <a href="#"><i class="fab fa-github"></i></a>
-    <a href="#"><i class="fab fa-instagram"></i></a>
-    <a href="#"><i class="fab fa-facebook"></i></a>
-    <a href="#"><i class="fab fa-twitter"></i></a>
-    <a href="#"><i class="fab fa-linkedin"></i></a>
-  </div>
-  <div class="footer-copyright">
-    This footer is made with <i class="fas fa-heart"></i> at Le Wagon
+  <div class="content-footer">
+    <div class="mail-subscription">
+      <h3> BE PART OF </h3>
+      <p> Subscribe to stay up-to-date with our news</p>
+      <form class="email-subscription">
+         <div class="form-group">
+            <label for="InputEmail1">Email address</label>
+             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Sign up with your email">
+          </div>
+      </form>
+      <h2>waste'd</h2>
+    </div>
+    <div class="footer-anchors">
+      <%= link_to "How to sell food?", path %>
+      <%= link_to "How to buy food?", path %>
+      <%= link_to "Why waste'd", path %>
+    </div>
+    <div class="footer-links">
+      <a href="#"><i class="fab fa-github"></i></a>
+      <a href="#"><i class="fab fa-instagram"></i></a>
+      <a href="#"><i class="fab fa-facebook"></i></a>
+    </div>
   </div>
 </div>
