--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,5 +1,7 @@
-<h1>User#welcome</h1>
+<p>Hi <%= @user.name %>,</p>
 
-<p>
-  <%= @greeting %>, find me in app/views/user_mailer/welcome.html.erb
-</p>
+<p>Today you became part of an amazing project! You will eat delicious food for a good price! </p>
+
+<p>We will keep you up to date with interesting news!</p>
+
+<p> See ya! </p>
