--- a/app/views/user_mailer/welcome.html.erb
+++ b/app/views/user_mailer/welcome.html.erb
@@ -1,7 +1,7 @@
-<p>Hi <%= @user.name %>,</p>
+<p>Hi <%= @username %>,</p>
 
-<p>Today you became part of an amazing project! You will eat delicious food for a good price! </p>
+<p>Today you became part of an amazing project! </p>
 
-<p>We will keep you up to date with interesting news!</p>
+<p>We will keep you up to date with news about foodwaste!</p>
 
 <p> See ya! </p>
