--- a/app/views/items/_form.html.erb
+++ b/app/views/items/_form.html.erb
@@ -2,6 +2,9 @@
   <%= f.error_notification %>
   <%= f.input :name %>
   <%= f.input :description %>
+  <%= f.input :address %>
+  <%= f.input :category, collection: Item::CATEGORY %>
+  <%= f.input :types, collection: Item::TYPES %>
   <div class='input-group date' id='datetimepicker1'>
     <%= f.input :expiration, class: "form-control" %>
     <span class="input-group-addon">
