--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -7,7 +7,6 @@
   </div>
   <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
   <a class="card-link" href="#" ></a>
-
 </div>
 
 
@@ -20,7 +19,7 @@
         <h4 class="modal-title" id="myModalLabel"><%= item.name %></h4>
       </div>
       <div class="modal-body">
-    <p><%= link_to 'Edit', edit_item_path(item) %></p>
+        <p><%= link_to 'Edit', edit_item_path(item) %></p>
         ...
       </div>
       <div class="modal-footer">
@@ -29,3 +28,4 @@
       </div>
     </div>
   </div>
+</div>
