--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,11 +1,39 @@
 <div class="container">
   <div class="row">
-    <% @items.each do |item| %>
-    <div class="col-xs-12 col-sm-4" >
-      <%= render 'shared/card', item: item %>
-    </div>
-    <% end %>
+    <div class="col-md-4 col-md-offset-4">
+      <%= form_tag items_path, method: :get do %>
+      <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Address" %>
+      <% end %>
+  <p>
+  <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+    Link with href
+  </a>
+</p>
+<div class="collapse" id="collapseExample">
+  <div class="card card-body filter-body">
+      <div class="filter">
+        <%= simple_form_for :term, url: items_path, method: :get do |f| %>
+          <%= f.input :catg, label: 'Filter by:', as: :check_boxes, collection: Item::CATEGORY%>
+          <%= f.input :att, label: 'Filter by:', as: :check_boxes, collection: Item::TYPES%>
+          <%= f.button :submit %>
+        <% end %>
+
+      </div>
   </div>
 </div>
 
-<!-- Modal: modalQuickView -->
+    </div>
+  </div>
+    <div class="row">
+      <% @items.each do |item| %>
+      <div class="col-xs-12 col-sm-4 col-md-4" >
+        <%= render 'shared/card', item: item %>
+      </div>
+      <% end %>
+    </div>
+  </div>
+</div>
+
+
+
+
