--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,11 +1,1 @@
-<div class="container">
-  <div class="row">
-    <% @items.each do |item| %>
-    <div class="col-xs-12 col-sm-4" >
-      <%= render 'shared/card', item: item %>
-    </div>
-    <% end %>
-  </div>
-</div>
-
-<!-- Modal: modalQuickView -->
+<%= render 'shared/card', item: @item %>
