--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -1,29 +1,67 @@
-<div class="card" data-toggle="modal" data-target="#myModal_<%= item.id %>" class="btn btn-primary" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= item.picture %>);">
-  <div class="card-category">Popular</div>
-  <div class="card-description">
-    <h2><%= item.name %></h2>
-  </div>
-  <img class="card-user" src="https://kitt.lewagon.com/placeholder/users/tgenaitay">
-  <a class="card-link" href="#" ></a>
-
-</div>
-
-
-<!-- Modal -->
-<div class="modal fade" id="myModal_<%= item.id %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel">
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
-        <h4 class="modal-title" id="myModalLabel"><%= item.name %></h4>
+<div class="container" >
+  <div class="row">
+    <% @items.each do |item| %>
+    <div class="col-xs-12 col-sm-4 content">
+      <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= item.picture %>); margin-top: 10px;">
+        <div class="card-description">
+          <h3><%= item.name %></h3>
+        </div>
+        <div class="add" data-toggle="modal" data-target="#myModal-<%= item.id %>"><i class="fas fa-plus"></i></div>
       </div>
-      <div class="modal-body">
-    <p><%= link_to 'Edit', edit_item_path(item) %></p>
-        ...
+      <div class="item-description">
+        <h6><%= item.user.username.capitalize %></h6>
+        <h6>$ <%= item.price %> </h6>
+        <p><%= item.pickup_time.strftime("pickup before %I:%M%p | 120m") %></p>
       </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save changes</button>
+    </div>
+
+    <!--modal-->
+    <div class="modal fade" id="myModal-<%= item.id %>" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h3 class="modal-title" id="myModalLabel"><%= item.name %></h3>
+            <h6><%= item.user.username.capitalize %></h6>
+            <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= item.picture %>); margin-top: 10px;"></div>
+            <p style="margin-top: 10px; font-size: 15px !important;">Availability: <%= item.quantity %></p>
+
+            <div class="editlinks">
+             <!-- Edit and Delete if you own this item -->
+             <% if policy(item).edit? %>
+             <%= link_to "Edit |", edit_item_path(item) %>
+             <% end %>
+             <% if policy(item).destroy? %>
+             <%= link_to "Delete", item_path(item),
+             method: :delete,
+             data: { confirm: "Are you sure?" } %>
+             <% end %>
+           </div>
+         </div>
+         <div class="modal-body" style="padding-bottom: 20px;">
+          <div class="row">
+            <div class="col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-4">
+              <div class=" form-modal">
+                <label>Quantity: </label>
+                <div class="input-group">
+                  <div class="input-group-btn">
+                    <button id="down" class="btn btn-default circles" onclick=" down('0')"><span class="glyphicon glyphicon-minus"></span></button>
+                  </div>
+                  <input type="text" id="myNumber" class="form-control input-number circle" value="1" />
+                  <div class="input-group-btn">
+                    <button id="up" class="btn btn-default circles" onclick="up(<%= item.quantity %>)"><span class="glyphicon glyphicon-plus"></span></button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-4 cart-btn">
+              <button type="button" class="btn btn-dark btn-lg">ADD TO CART</button>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </div>
+  <% end %>
+</div>
+</div>
