--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -93,13 +93,21 @@ $quantity-btn-color: #95d7fc;
 .circles {
   border-radius: 30px !important;
   height: 45px !important;
+  background-color: black;
+  color: #fff;
+  &:last-child{
+  margin-left: 9px !important;
+}
 }
 
 .circle {
   border-radius: 40px !important;
-  height: 80px !important;
+  height: 65px !important;
   text-align: center !important;
   font-size: 25px !important;
+  border: 1px solid black;
+  margin: 5px !important;
+
 }
 
 .editlinks {
@@ -117,7 +125,7 @@ $quantity-btn-color: #95d7fc;
   justify-content: space-around;
   align-content: center;
   vertical-align: center;
-  margin-top: 30px;
+  margin-top: 5px;
   border-radius: 5px;
   button{
     background-color: black;
@@ -128,10 +136,31 @@ $quantity-btn-color: #95d7fc;
     color: black;
     border: 3px solid black;
   }
+  &:last-child{
+    margin-top: 8px;
+  }
 }
 
 .cart-btn-now{
   background-color: #fff;
     color: black;
     border: 3px solid black;
+}
+
+.cart-btn1 {
+  display: flex;
+  justify-content: space-around;
+  align-content: center;
+  vertical-align: center;
+  margin-top: 5px;
+  border-radius: 5px;
+  button:hover{
+    background-color: black;
+    color: #fff;
+  }
+  button{
+    background-color: #fff;
+    color: black;
+    border: 3px solid black;
+  }
 }
