--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -5,7 +5,7 @@
     <div class="col-xs-12 col-sm-4 content">
       <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= item.picture %>); margin-top: 10px;">
         <div class="card-description">
-          <h3><%= item.name %></h3>
+          <h2><%= item.name %></h2>
         </div>
         <div class="add" data-toggle="modal" data-target="#myModal-<%= item.id %>"><i class="fas fa-plus"></i></div>
       </div>
@@ -25,7 +25,10 @@
             <h3 class="modal-title" id="myModalLabel"><%= item.name %></h3>
             <h6><%= item.user.username.capitalize %></h6>
             <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= item.picture %>); margin-top: 10px;"></div>
-            <p style="margin-top: 10px; font-size: 15px !important;">Availability: <%= item.quantity %></p>
+            <p style="margin-top: 10px; font-size: 14px !important;">Availability: <strong><%= item.quantity %></strong></p>
+            <p style="margin-top: -5px; font-size: 14px !important;">Category: <strong><%= item.category %></strong></p>
+            <p style="margin-top: -5px; font-size: 14px !important;">Description: <strong><%= item.description %></strong></p>
+            <p style="margin-top: -5px; font-size: 14px !important;">Expiration Date: <%= item.expiration %></p>
 
             <div class="editlinks">
              <!-- Edit and Delete if you own this item -->
@@ -57,6 +60,9 @@
             </div>
             <div class="col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-4 cart-btn">
               <button type="button" class="btn btn-dark btn-lg">ADD TO CART</button>
+            </div>
+            <div class="col-sm-offset-1 col-sm-4 col-md-offset-1 col-md-4 cart-btn1">
+             <button type="button" class="btn btn-dark ">One-Click Shop</button>
             </div>
           </div>
         </div>
