--- a/app/views/shared/_card.html.erb
+++ b/app/views/shared/_card.html.erb
@@ -10,7 +10,7 @@
         <div class="add" data-toggle="modal" data-target="#myModal-<%= item.id %>"><i class="fas fa-plus"></i></div>
       </div>
       <div class="item-description">
-        <h6><%= item.user.username.capitalize %></h6>
+        <h6><%= item.user.name %></h6>
         <h6>$ <%= item.price %> </h6>
         <p><%= item.pickup_time.strftime("pickup before %I:%M%p | 120m") %></p>
       </div>
@@ -23,7 +23,7 @@
           <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
             <h3 class="modal-title" id="myModalLabel"><%= item.name %></h3>
-            <h6><%= item.user.username.capitalize %></h6>
+            <h6><%= item.user.name %></h6>
             <div class="card" style="background-image: linear-gradient(rgba(0,0,0,0.3), rgba(0,0,0,0.2)), url(<%= item.picture %>); margin-top: 10px;"></div>
             <p style="margin-top: 10px; font-size: 14px !important;">Availability: <strong><%= item.quantity %></strong></p>
             <p style="margin-top: -5px; font-size: 14px !important;">Category: <strong><%= item.category %></strong></p>
