--- a/app/views/reservations/index.html.erb
+++ b/app/views/reservations/index.html.erb
@@ -1,2 +1,35 @@
-<h1>Reservations#index</h1>
-<p>Find me in app/views/reservations/index.html.erb</p>
+<div class="container-fluid">
+  <div>
+
+  </div>
+  <div class="row">
+    <!-- CARDS -->
+    <div class="col-xs-12 col-md-8">
+      <div class="card-holder">
+        <%= render 'card_in_cart' %>
+      </div>
+    </div>
+    <!-- BOOKING -->
+    <div class="col-xs-6 col-xs-offset-3 col-md-4 col-md-offset-0">
+      <div class="cards-container">
+
+
+      <div id="buy-container" class="text-center">
+        <div id="buy-box">
+          <h3 id="total">Total: <%= @total_price %>$</h3>
+          <h4 id="total">Items: <%= @total_items %></h4>
+          <%= simple_form_for @purchased_item, url: purchased_items_path, method: :post do |f| %>
+          <%= f.error_notification %>
+          <%= f.hidden_field :total_price, value: @total_price %>
+          <%= f.hidden_field :user_id, value: current_user.id %>
+          <%= f.hidden_field :reservation, value: @reservations%>
+          <div id="description-button">
+            <%= f.button :submit, 'Buy now', class: 'btn btn-danger btn-lg' %>
+          </div>
+          <% end %>
+        </div>
+      </div>
+    </div>
+      </div>
+  </div>
+</div>
