--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -49,15 +49,52 @@
   </div>
 
   <!-- Dropdown list appearing on mobile only -->
+
+  <% if user_signed_in? %>
+
+  <!-- Dropdown links when logged in -->
+
+    <div class="navbar-wagon-item hidden-md hidden-lg">
+      <div class="dropdown">
+        <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
+        <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
+          <li><%= link_to "Why us?", "#" %></li>
+          <li><%= link_to "Discover", "#"  %></li>
+          <li><%= link_to "Other one", "#" %></li>
+          <li><%= link_to "Upload", new_item_path %></li>
+          <li><%= link_to "Settings", new_item_path %></li>
+          <li>
+            <%= link_to destroy_user_session_path, method: :delete do %>
+              <i class="fa fa-sign-out-alt"></i>  <%= t(".sign_out", default: "Log out") %>
+            <% end %>
+          </li>
+
+        </ul>
+      </div>
+    </div>
+
+  <!-- Dropdown links when logged out -->
+
+  <% else %>
+
   <div class="navbar-wagon-item hidden-md hidden-lg">
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><a href="#">Why us?</a></li>
-        <li><a href="#">Discover</a></li>
-        <li><a href="#">Other one</a></li>
+        <li><%= link_to "Why us?", "#" %></li>
+        <li><%= link_to "Discover", "#"  %></li>
+        <li><%= link_to "Other one", "#" %></li>
+        <li>
+          <%= link_to new_user_session_path, method: :get do %>
+            <i class="fa fa-sign-in-alt"></i>  <%= t(".sign_in", default: "Sign in") %>
+          <% end %>
+        </li>
+
       </ul>
     </div>
   </div>
+
+  <% end %>
+
 </div>
 
