--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,39 +1,51 @@
 <div class="container">
   <div class="row">
-
-
-
     <div class="col-md-4 col-md-offset-4">
       <%= form_tag items_path, method: :get do %>
       <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Address" %>
       <% end %>
-  <p>
-  <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
-    Link with href
-  </a>
-</p>
-<div class="collapse" id="collapseExample">
-  <div class="card card-body filter-body">
-      <div class="filter">
-        <%= simple_form_for :term, url: items_path, method: :get do |f| %>
-          <%= f.input :catg, label: 'Filter by:', as: :check_boxes, collection: Item::CATEGORY%>
-          <%= f.input :att, label: 'Filter by:', as: :check_boxes, collection: Item::TYPES%>
-          <%= f.button :submit %>
-        <% end %>
-
+      <p>
+        <a class="btn btn-primary" data-toggle="collapse" href="#collapseExample" role="button" aria-expanded="false" aria-controls="collapseExample">
+          Link with href
+        </a>
+      </p>
+      <div class="collapse" id="collapseExample">
+        <div class="card card-body filter-body">
+          <div class="filter">
+            <%= simple_form_for :term, url: items_path, method: :get do |f| %>
+            <%= f.input :catg, label: 'Filter by:', as: :check_boxes, collection: Item::CATEGORY%>
+            <%= f.input :att, label: 'Filter by:', as: :check_boxes, collection: Item::TYPES%>
+            <%= f.button :submit %>
+            <% end %>
+          </div>
+        </div>
       </div>
-  </div>
-</div>
-
     </div>
+      </div>
+        </div>
+
+<div class="container">
+<div id="myCarousel" class="carousel slide" data-ride="carousel">
+  <!-- Wrapper for slides -->
+  <div class="carousel-inner">
+    <% @items.each_with_index do |item, index| %>
+    <div class="item <%= 'active' if index == 0 %>">
+      <%= render 'shared/card', item: item %>
+    </div>
+ </div>
+    <% end %>
   </div>
-<%= render 'shared/card', item: @item %>
-  </div>
+
+
+  <!-- Left and right controls -->
+  <a class="left carousel-control" href="#myCarousel" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
-
-
-
-
-
-
+</div>
 
