--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -32,3 +32,47 @@
 </div>
 
 
+
+<div class="container">
+  <div class="row">
+    <div class="col-xs-11 col-md-10 col-centered">
+      <div id="carousel" class="carousel slide" data-ride="carousel" data-type="multi" data-interval="2500">
+
+
+
+
+<div class="container">
+  <div class="row">
+    <div class="col-xs-11 col-md-10 col-centered">
+      <div id="carousel" class="carousel slide" data-ride="carousel" data-type="multi">
+
+        <div class="carousel-inner">
+          <%= @items.each_with_index do |item, index| %>
+          <div class="item <%= 'active' if index == 0 %>">
+            <div class="carousel-col">
+              <div class="img-responsive">
+              <%= render 'shared/card', item: item %>
+            </div>
+            </div>
+          </div>
+          <% end %>
+        </div>
+
+        <!-- Controls -->
+        <div class="left carousel-control">
+          <a href="#carousel" role="button" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+            <span class="sr-only"></span>
+          </a>
+        </div>
+        <div class="right carousel-control">
+          <a href="#carousel" role="button" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+            <span class="sr-only"></span>
+          </a>
+        </div>
+      </div>
+
+    </div>
+  </div>
+</div>
