--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -14,12 +14,14 @@
       <%= link_to "Why us?", "#", class: "navbar-wagon-item navbar-wagon-link underline-black" %>
       <%= link_to "Discover", "#", class: "navbar-wagon-item navbar-wagon-link underline-black" %>
       <%= link_to "Connect", "#", class: "navbar-wagon-item navbar-wagon-link underline-black" %>
+      <% if current_user.role == ( 'supplier' || 'both' ) %>
       <%= link_to "Upload", new_item_path , class: "navbar-wagon-item navbar-wagon-link underline-black" %>
+      <% end %>
 
       <!-- Avatar with dropdown menu -->
       <div class="navbar-wagon-item">
         <div class="dropdown">
-          <%= image_tag "http://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
+          <%= cl_image_tag(current_user.avatar, class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" ) %>
           <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
             <li>
               <%= link_to "#" do %>
