--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,2 +1,10 @@
-<h1>Orders#new</h1>
-<p>Find me in app/views/orders/new.html.erb</p>
+<h1>Thank you for your order!</h1>
+<h3>Here is a summary of Order #<%= @order.id %>:</h3>
+<ul>
+  <li>Status: <%= @order.state %></li>
+  <li>Item: <%= @order.item_sku %></li>
+  <li>Amount: <%= humanized_money_with_symbol(@order.amount) %></li>
+  <li>Order date: <%= @order.created_at %></li>
+</ul>
+
+<%= link_to 'All orders', orders_path %>
