--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,7 +1,9 @@
 .banner {
+  background-image: url("veggies.png");
   color: white;
   text-align: center;
   height: 100vh;
+  width: 100%;
   /* if you have a 70px navbar => height: calc(100vh - 70px); */
   background-size: cover !important;
   display: flex;
