--- a/app/assets/stylesheets/components/_home.scss
+++ b/app/assets/stylesheets/components/_home.scss
@@ -1,19 +1,24 @@
 .caps {
   text-transform: uppercase;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
 }
 
 
-.home-one{
+.cfhome{
   background-color: #221F1F;
   color: #fff;
+  padding: 80px 0px;
 }
 
 .home-two{
-  padding: 0;
-  margin: 0;
+  padding: 120px 0px;
+  .image{
+    border-radius: 40px;
+    width: 80px;
+    height: 80px;
+  }
 }
 
-.home-three{
-  padding: 0;
-  margin: 0;
-}
+
