--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,31 +1,48 @@
 <%= render 'banner' %>
 
-<div class="container-fluid home-one">
-  <div class="row">
-    <div class="col-md-4 offset-md-1">
-      <h2 class="caps">We are the new recyclers in town.</h2>
+<div class="container-fluid cfhome">
+  <div class="container home-one">
+    <div class="row">
+      <div class="col-md-6">
+        <h2 class="caps">We are the new recyclers in town.</h2>
+      </div>
+      <div class="col-md-6">
+        <p>Eat for a fair price and save unsold food from being wasted. Over 1/3 of all food produced globally goes to waste. The annual value of food wasted globally is $1 trillion, and it weighs 1.3 billion tonnes. Restaurants and cafes throw away food that they can't sell anymore everyday. Food is wasted and money is lost. Let's change that.</p>
+      </div>
     </div>
-    <div class="col-md-6">Eat for a fair price and save unsold food from being wasted. Over 1/3 of all food produced globally goes to waste. The annual value of food wasted globally is $1 trillion, and it weighs 1.3 billion tonnes. Restaurants and cafes throw away food that they can't sell anymore everyday. Food is wasted and money is lost. Let's change that. </div>
   </div>
 </div>
+
 <div class="container home-two">
   <div class="row">
-    <div class="col-md-4 caps">INCREASE REVENUE</div>
-    <div class="col-md-4 caps">REDUCE COSTS</div>
-    <div class="col-md-4 caps">IMPROVE BRAND IMAGE</div>
+    <div class="col-md-4 caps">
+      <div class="image" ><%= image_tag "revenue.svg" %></div>
+      INCREASE REVENUE
+    </div>
+    <div class="col-md-4 caps">
+      <div class="image"><%= image_tag "piggy-bank.svg" %></div>
+      REDUCE COSTS
+    </div>
+    <div class="col-md-4 caps">
+      <div class="image"> <%= image_tag "success.svg" %></div>
+      IMPROVE BRAND IMAGE
+    </div>
   </div>
 </div>
-<div class="container home-three">
-  <div class="row">
-    <div class="col-md-6">
-      <h2 class="caps">This is how waste'd works.</h2>
-    </div>
-    <div class="col-md-6">
-      <ol>
-        <li>Download the app and browse unsold food from restaurants, cafes and grocery stores.</li>
-        <li> Select and purchase food for 1/2 price -- all within the app.</li>
-        <li>Pick it up as takeaway and enjoy!</li>
-      </ol>
+
+<div class="container-fluid cfhome">
+  <div class="container home-three">
+    <div class="row">
+      <div class="col-md-6">
+        <h2 class="caps">This is how waste'd works.</h2>
+      </div>
+      <div class="col-md-6">
+        <ol>
+          <li>Download the app and browse unsold food from restaurants, cafes and grocery stores.</li>
+          <li> Select and purchase food for 1/2 price -- all within the app.</li>
+          <li>Pick it up as takeaway and enjoy!</li>
+        </ol>
+      </div>
     </div>
   </div>
 </div>
