--- a/app/views/reservations/_card_in_cart.html.erb
+++ b/app/views/reservations/_card_in_cart.html.erb
@@ -38,11 +38,12 @@
 
             <!-- Icon to remove from cart if already in cart -->
             <% elsif status == 'reserved' %>
-              <%= simple_form_for @reservation, url: @reservation, method: :delete do |f| %>
+              <%= simple_form_for @reservation, url: @reservation, method: :patch do |f| %>
                 <%= f.error_notification %>
                 <%= f.hidden_field :user, value: current_user.id %>
                 <%= f.hidden_field :item_id, value: reservation.item.id %>
                 <%= f.hidden_field :in_cart, value: true %>
+                <%= f.hidden_field :quantity, value: (reservation.quantity + 1) %>
                 <%= f.button :button, class: 'card-icon-cart' do %>
                   <%= icon('fas', 'minus') %>
                 <% end %>
