--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,7 @@
 <%= render 'banner' %>
 
 <div class="container-fluid cfhome">
+
   <div class="container home-one">
     <div class="row">
       <div class="col-md-6">
@@ -47,3 +48,19 @@
   </div>
 </div>
 
+<div class="container home-two">
+  <div class="row">
+    <div class="col-md-4 caps">
+      <div class="image" ><%= image_tag "revenue.svg" %></div>
+      INCREASE REVENUE
+    </div>
+    <div class="col-md-4 caps">
+      <div class="image"><%= image_tag "piggy-bank.svg" %></div>
+      REDUCE COSTS
+    </div>
+    <div class="col-md-4 caps">
+      <div class="image"> <%= image_tag "success.svg" %></div>
+      IMPROVE BRAND IMAGE
+    </div>
+  </div>
+</div>
