Carousels working, map working

--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -164,3 +164,14 @@ $quantity-btn-color: #95d7fc;
     border: 3px solid black;
   }
 }
+
+.line-breaker {
+  font-size: 5px;
+}
+
+.overview {
+  display:flex;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
