--- a/app/assets/stylesheets/components/_index.scss
+++ b/app/assets/stylesheets/components/_index.scss
@@ -5,8 +5,20 @@
 @import "card";
 @import "banner";
 @import "home";
+@import "button";
 
 .filter-body {
-  height: 2000px;
+  height: auto;
+}
+
+.filter-modal {
+    display: flex;
+    width: 100%;
+    flex: 0 0 50%;
+}
+
+.filter, .search {
+  height: 30px;
+  width: auto;
 }
 
