--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,9 @@
   <link href="https://fonts.googleapis.com/css?family=Montserrat:300,400,500,700,900" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,700" rel="stylesheet">
   <%#= stylesheet_pack_tag 'application', media: 'all' %> <!-- Uncomment if you import CSS in app/javascript/packs/application.js -->
+  <%= stylesheet_pack_tag "map" %>
+  <%= stylesheet_link_tag 'application', media: 'all' %>
+
 </head>
 <body>
   <%= render 'shared/navbar' %>
@@ -18,5 +21,6 @@
   <%= render 'shared/footer' %>
   <%= javascript_include_tag 'application' %>
   <%= javascript_pack_tag 'application' %>
+  <%= javascript_pack_tag "map" %>
 </body>
 </html>
