--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -11,9 +11,9 @@
 
       <!-- Links when logged in -->
 
-      <%= link_to "Why us?", "#", class: "navbar-wagon-item navbar-wagon-link underline-black" %>
-      <%= link_to "Discover", "#", class: "navbar-wagon-item navbar-wagon-link underline-black" %>
+      <%= link_to "Why us", home_path, class: "navbar-wagon-item navbar-wagon-link underline-black" %>
       <%= link_to "Connect", "#", class: "navbar-wagon-item navbar-wagon-link underline-black" %>
+      <%= link_to "Discover", items_path, class: "navbar-wagon-item navbar-wagon-link underline-black" %>
       <% if current_user.role == ( 'supplier' || 'both' ) %>
       <%= link_to "Upload", new_item_path , class: "navbar-wagon-item navbar-wagon-link underline-black" %>
       <% end %>
@@ -43,9 +43,10 @@
       </div>
     <% else %>
       <!-- Login link (when logged out) -->
-      <%= link_to "Why us?", "#", class: "navbar-wagon-item navbar-wagon-link underline-black" %>
+      <%= link_to "Why us", home_path, class: "navbar-wagon-item navbar-wagon-link underline-black" %>
       <%= link_to "Discover", "#", class: "navbar-wagon-item navbar-wagon-link underline-black" %>
       <%= link_to "Connect", "#", class: "navbar-wagon-item navbar-wagon-link underline-black" %>
+      <%= link_to "Discover", items_path, class: "navbar-wagon-item navbar-wagon-link underline-black" %>
       <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link underline-black" %>
     <% end %>
   </div>
@@ -60,7 +61,7 @@
       <div class="dropdown">
         <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
         <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-          <li><%= link_to "Why us?", "#" %></li>
+          <li><%= link_to "Why us", home_path %></li>
           <li><%= link_to "Discover", "#"  %></li>
           <li><%= link_to "Other one", "#" %></li>
           <li><%= link_to "Upload", new_item_path %></li>
@@ -83,9 +84,10 @@
     <div class="dropdown">
       <i class="fa fa-bars dropdown-toggle" data-toggle="dropdown"></i>
       <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-        <li><%= link_to "Why us?", "#" %></li>
+        <li><%= link_to "Why us", home_path %></li>
         <li><%= link_to "Discover", "#"  %></li>
         <li><%= link_to "Other one", "#" %></li>
+        <li><%= link_to "Discover", items_path %></li>
         <li>
           <%= link_to new_user_session_path, method: :get do %>
             <i class="fa fa-sign-in-alt"></i>  <%= t(".sign_in", default: "Sign in") %>
